Protect stored cloud identities
